--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "prestart": "./node_modules/react-viro/bin/run_ngrok.sh",
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "lint:fix": "eslint --fix ./"
   },
   "dependencies": {
     "firebase": "^5.7.2",
@@ -14,15 +15,16 @@
     "react-viro": "2.12.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "babel-jest": "23.6.0",
     "babel-preset-react-native": "^4.0.0",
     "eslint": "^5.12.0",
-    "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.3",
     "eslint-plugin-react-native": "^3.5.0",
     "jest": "23.6.0",
+    "ngrok": "^3.1.0",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
