--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint --fix ./"
   },
   "dependencies": {
+    "eslint-config-airbnb": "^17.1.0",
     "firebase": "^5.7.2",
     "react": "16.3.1",
     "react-native": "0.55.1",
