--- a/package.json
+++ b/package.json
@@ -24,11 +24,18 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.12.3",
     "eslint-plugin-react-native": "^3.5.0",
+    "husky": "^1.3.1",
     "jest": "23.6.0",
     "ngrok": "^3.1.0",
     "react-test-renderer": "16.3.1"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test && eslint --fix ./",
+      "pre-push": "npm test"
+    }
   }
 }
