--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^5.7.2",
     "react": "16.3.1",
     "react-native": "0.55.1",
+    "react-navigation": "^3.0.9",
     "react-viro": "2.12.0"
   },
   "devDependencies": {
