--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint-config-airbnb": "^17.1.0",
     "firebase": "^5.7.2",
+    "metro-config": "^0.51.1",
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-navigation": "^3.0.9",
@@ -32,7 +33,10 @@
     "metro-react-native-babel-preset": "0.51.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transform": {
+      "^.+\\.js$": "<rootDir>/node_modules/react-native/jest/preprocessor.js"
+    }
   },
   "husky": {
     "hooks": {
