--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "metro-config": "^0.51.1",
     "react": "16.6.1",
     "react-native": "0.57.7",
+    "react-native-table-component": "^1.2.0",
     "react-navigation": "^3.0.9",
     "react-viro": "2.13.0"
   },
