--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint --fix ./"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "eslint-config-airbnb": "^17.1.0",
     "firebase": "^5.7.2",
     "metro-config": "^0.51.1",
